# google-cloud-rust

./: Cargo.toml
auth/: Cargo.toml
discovery-generator/: Cargo.toml
discovery-generator/src/: main.rs
gax/src/error/: error.rs  mod.rs
storage/: Cargo.toml  README.md  upload-me.txt
storage/src/: lib.rs  model.rs
userexample/: Cargo.toml  README.md
userexample/resources/: upload-me.txt
userexample/src/: main.rs
