[package]
authors = ["Google LLC"]
categories = ["authentication", "web-programming"]
description = "An auth library for Cloud Google APIs."
edition = "2021"
keywords = ["auth", "google", "google-cloud"]
license = "Apache-2.0"
name = "google-cloud-auth"
repository = "https://github.com/googleapis/google-cloud-rust/tree/main/auth"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
backoff = {version = "0.4", features = ["tokio"]}
base64 = "0.13"
chrono = {version = "0.4", features = ["serde"]}
http = "0.2"
reqwest = {version = "0.11", features = ["json"]}
rustls = "0.21"
rustls-pemfile = "1.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
tokio = {version = "1.32", features = ["full", "macros"]}
